--- a/ProyectoWeb/ProyectoWeb.html
+++ b/ProyectoWeb/ProyectoWeb.html
@@ -5,13 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        body {
-        background: url("Fondo web.jpg");
-      }
+        body{
+
+          background-image: url("FondPant4.jpg");
+          background-position: center;
+          height: 500px;
+          background-repeat: no-repeat;
+          background-size: cover;
+        }
+      
     </style>
     <link rel="stylesheet" href="Stylesheet.css">
 </head>
 <body>
-   <h1 style="background-color:hotpink"><p style="color:DodgerBlue;">MERMELADAS Y CONSERVAS JOVI</p></h1>
+   <h1 style="background-color:hotpink" ; style="color:rgb(203, 30, 255);"><p style="text-align:center;" >MERMELADAS Y CONSERVAS JOVI</p></h1>
 </body>
 </html>
